Several File Commitment

--- a/_inputDataExamples/initStructures/res/acsm2s.conf
+++ b/_inputDataExamples/initStructures/res/acsm2s.conf
@@ -25,7 +25,7 @@ nHours=0
 nAttempts=0
 
 # random seed (random if 0)
-randomSeed=584759177
+randomSeed=2016160946
 
 # Debug Level: Runtime number of prompted messages level
 debugLevel=0
@@ -97,7 +97,7 @@ cleavageProbability=0.5
 reverseReactions=0
 
 # Ratio between forward and backward reactions (if reverseReactions = TRUE)
-revRctRatio=nan
+revRctRatio=0
 
 # kinetic constants
 K_ass=50
