Internal Processes Timers have been converted from QTime to clock_t
Internal Processes Timers have been converted from QTime to clock_t

--- a/_inputDataExamples/configurationFile/acsm2s.conf
+++ b/_inputDataExamples/configurationFile/acsm2s.conf
@@ -1,10 +1,11 @@
 nGEN=1
 nSIM=1
-nSeconds=1000
+nSeconds=100
 nReactions=200000000
 randomSeed=0
 debugLevel=0
 timeStructuresSavingInterval=10
+nHours=0
 
 lastFiringDiskSpeciesID=29
 maxLOut=0
