--- a/_inputDataExamples/configurationFile/acsm2s.conf
+++ b/_inputDataExamples/configurationFile/acsm2s.conf
@@ -1,41 +1,120 @@
+# =================
+# ACSM2S PARAMETERS
+# =================
+
+# -----------------
+# SYSTEM PARAMETERS
+# -----------------
+
+# Number of Generations
 nGEN=2
+
+# Number of Simulations per generation (after noMultipleSimsGens generations)
 nSIM=1
+
+# Number of seconds
 nSeconds=10
+
+# Number of max reactions permitted (step)
 nReactions=200000000
-randomSeed=0
-debugLevel=0
-timeStructuresSavingInterval=10
+
+# Max number of hours (computational time) of the simulation (if 0 no limits are set)
 nHours=0
 
+# Number of attempts in same network / different random seed (if 0 no limits are set) 
+nAttempts=0
+
+# random seed (random if 0)
+randomSeed=1638112169
+
+# Debug Level: Runtime number of prompted messages level
+debugLevel=0
+
+# Save structures to file every...
+timeStructuresSavingInterval=10
+
+# Save file times avery...
+fileTimesSaveInterval=0
+
+# ------------------------
+# ENVIRONMENTAL PARAMETERS
+# ------------------------
+
+# Total number of species in the initial population
+# 	If The number is greater than the theoretical number
+#	according to initial max length and the alphabet all species
+#	will be created, otherwise if it is equal to 0 the system will be
+#	upload from file.
+
+# Identificator of the last firing disk species
 lastFiringDiskSpeciesID=29
-maxLOut=0
-overallConcentration=1.000000e-04
+
+# Initial distribution
+# 1- Proportional: Same number of molecules for each species
+# 2- Uniform: Same number of molecules for each length
+# 3- inversely proportional: more morecules for the short species
+
+# Overall initial concentration
+overallConcentration=0.0001
+
+# Overall energy carriers concentration
 ECConcentration=0
+
+# Alphabet (e.g. AGCT for DNA)
 alphabet=AB
-volume=1.000000e-18
+
+# Volume (dm^3)
+volume=1e-18
+
+# ------------------
+# DYNAMIC PARAMETERS
+# ------------------
+
+# Energy introduction
+#	0: Not energy in the system
+#	1: Energy is present
 energy=0
+
+# Ratio of energizable species
 ratioSpeciesEnergizable=0
+
+# Complex Formation Symmetry (GILLESPIE computation: if equal to 1, one complex
+#	formation reaction for each substrate will be created, otherwise only
+#	complex formation reaction with the first substrate will be considered
 complexFormationSymmetry=0
+
+# IF 1 also monomers can catalyze reactions, otherwise reactions are catalyzed
+# starting from dimers
 nonCatalyticMaxLength=2
-reactionProbability=1.033058e-03
-cleavageProbability=5.000000e-01
+
+# Catalysis probability
+reactionProbability=0.00103306
+
+# Cleavage probability (Condensation Probability is 1 - cleavage probability)
+cleavageProbability=0.5
+
+# Enable reverse reactions
 reverseReactions=0
+
+# Ratio between forward and backward reactions (if reverseReactions = TRUE)
+revRctRatio=0
+
+# kinetic constants
 K_ass=50
 K_diss=25
 K_cpx=50
-K_cpxDiss=1.000000e-06
+K_cpxDiss=1e-06
 K_nrg=0
 K_nrg_decay=0
-moleculeDecay_KineticConstant=2.000000e-02
-diffusion_contribute=0
-solubility_threshold=0
-influx_rate=1.000000e-21
+moleculeDecay_KineticConstant=0.02
 
-ratio_firing_disk=0
-lunghezza_max_fd=2
-scelta_concentrazioni=1
-gamma_powerlaw_concentrazioni=2.100000e+00
-decisione_catalizzatori=1
-massima_lunghezza_su_cui_calcolare_le_reazioni=4
-controllo_ACS_nel_ciclo=4
-lMaxInflux=4
+# (0 or 0.5) if set to 0.5 the speed of molecules goes with the inverse of the square of the length
+diffusion_contribute=0
+
+# Solubility Threshold (The threshold set the centre of the logistic curve, 0 to exclude precipitation)
+solubility_threshold=0
+
+# Overall influx (moles per second) and maximum length of the species passing the filter in the outflow process
+influx_rate=1e-21
+maxLOut=0
+
