--- a/_inputDataExamples/configurationFile/acsm2s.conf
+++ b/_inputDataExamples/configurationFile/acsm2s.conf
@@ -70,6 +70,12 @@ alphabet=AB
 # Volume (dm^3)
 volume=1e-18
 
+# Volume growth possibility (1: volume changes, 0: volume is fixed)
+volumeGrowth=0
+
+# Division type (1: Stochastic, 0: deterministic)
+stochDivision=0
+
 # ------------------
 # DYNAMIC PARAMETERS
 # ------------------
