--- a/_inputDataExamples/initStructures/res/acsm2s.conf
+++ b/_inputDataExamples/initStructures/res/acsm2s.conf
@@ -70,7 +70,7 @@ alphabet=AB
 # Volume (dm^3)
 volume=1e-18
 
-# Volume growth possibility (1: volume changes, 0: volume is fixed)
+Volume growth possibility (1: volume changes, 0: volume is fixed)
 volumeGrowth=0
 
 # Division type (1: Stochastic, 0: deterministic)
@@ -87,11 +87,6 @@ energy=0
 
 # Ratio of energizable species
 ratioSpeciesEnergizable=0
-
-# Complex Formation Symmetry (GILLESPIE computation: if equal to 1, one complex
-#	formation reaction for each substrate will be created, otherwise only
-#	complex formation reaction with the first substrate will be considered
-complexFormationSymmetry=0
 
 # IF 1 also monomers can catalyze reactions, otherwise reactions are catalyzed
 # starting from dimers
