Spontanous Reactions is going to be added

--- a/_inputDataExamples/configurationFile/acsm2s.conf
+++ b/_inputDataExamples/configurationFile/acsm2s.conf
@@ -109,6 +109,9 @@ reverseReactions=0
 # Ratio between forward and backward reactions (if reverseReactions = TRUE)
 revRctRatio=0
 
+# Spontaneous Reactions (if present = TRUE)
+spontRct=1
+
 # kinetic constants
 K_ass=50
 K_diss=25
@@ -117,6 +120,8 @@ K_cpxDiss=1
 K_nrg=0
 K_nrg_decay=0
 moleculeDecay_KineticConstant=0.02
+K_spont_ass=234.0
+K_spont_diss=43.1
 
 # (0 or 0.5) if set to 0.5 the speed of molecules goes with the inverse of the square of the length
 diffusion_contribute=0
