Spontaneous Reactions have been implemented
Spontaneous Reactions have been implemented

--- a/_inputDataExamples/initStructures/res/acsm2s.conf
+++ b/_inputDataExamples/initStructures/res/acsm2s.conf
@@ -1,5 +1,6 @@
 # =================
 # ACSM2S PARAMETERS
+# Ver. 4.8b20131026.60
 # =================
 
 # -----------------
@@ -88,11 +89,6 @@ energy=0
 # Ratio of energizable species
 ratioSpeciesEnergizable=0
 
-# Complex Formation Symmetry (GILLESPIE computation: if equal to 1, one complex
-#	formation reaction for each substrate will be created, otherwise only
-#	complex formation reaction with the first substrate will be considered
-complexFormationSymmetry=0
-
 # IF 1 also monomers can catalyze reactions, otherwise reactions are catalyzed
 # starting from dimers
 nonCatalyticMaxLength=2
@@ -119,9 +115,9 @@ K_cpx=50
 K_cpxDiss=1
 K_nrg=0
 K_nrg_decay=0
-moleculeDecay_KineticConstant=0.02
 K_spont_ass=0
 K_spont_diss=0
+moleculeDecay_KineticConstant=0.02
 
 # (0 or 0.5) if set to 0.5 the speed of molecules goes with the inverse of the square of the length
 diffusion_contribute=0
