--- a/_inputDataExamples/initStructures/acsm2s.conf
+++ b/_inputDataExamples/initStructures/acsm2s.conf
@@ -33,8 +33,11 @@ debugLevel=0
 # Save structures to file every...
 timeStructuresSavingInterval=10
 
-# Save file times avery...
+# Save file times every (if 0 amounts are stores ad each step)
 fileTimesSaveInterval=0
+
+# Save species amount every (if 0 amounts are stores ad each step)
+fileAmountSaveInterval=0
 
 # Minimal new species creation probability to allow system expansion
 # (If you want to avoid the creation of both new species and reactions set >= 1)
