A little bit before new species concentration
A little bit before new species concentration

--- a/_inputDataExamples/configurationFile/acsm2s.conf
+++ b/_inputDataExamples/configurationFile/acsm2s.conf
@@ -33,12 +33,18 @@ debugLevel=0
 # Save structures to file every...
 timeStructuresSavingInterval=10
 
-# Save file times avery...
+# Save file times every (if 0 amounts are stores ad each step)
 fileTimesSaveInterval=0
+
+# Save species amount every (if 0 amounts are stores ad each step)
+fileAmountSaveInterval=0
 
 # Minimal new species creation probability to allow system expansion
 # (If you want to avoid the creation of both new species and reactions set >= 1)
 newSpeciesProbMinThreshold=1
+
+# Initial species concentration initialization method
+randomInitSpeciesConcentration=0
 
 # ------------------------
 # ENVIRONMENTAL PARAMETERS
@@ -52,6 +58,14 @@ newSpeciesProbMinThreshold=1
 
 # Identificator of the last firing disk species
 lastFiringDiskSpeciesID=29
+
+# Initial distribution
+# 1- Proportional: Same number of molecules for each species
+# 2- Uniform: Same number of molecules for each length
+# 3- inversely proportional: more morecules for the short species
+
+# Overall initial concentration
+overallConcentration=0.0001
 
 # Overall energy carriers concentration
 ECConcentration=0
