--- a/_inputDataExamples/initStructures/acsm2s.conf
+++ b/_inputDataExamples/initStructures/acsm2s.conf
@@ -43,6 +43,9 @@ fileAmountSaveInterval=0
 # (If you want to avoid the creation of both new species and reactions set >= 1)
 newSpeciesProbMinThreshold=1
 
+# Initial species concentration initialization method
+randomInitSpeciesConcentration=1
+
 # ------------------------
 # ENVIRONMENTAL PARAMETERS
 # ------------------------
