--- a/_inputDataExamples/initStructures/acsm2s.conf
+++ b/_inputDataExamples/initStructures/acsm2s.conf
@@ -13,7 +13,7 @@ nGEN=10
 nSIM=1
 
 # Number of seconds
-nSeconds=10
+nSeconds=10000
 
 # Number of max reactions permitted (step)
 nReactions=200000000
@@ -31,16 +31,16 @@ randomSeed=0
 debugLevel=0
 
 # Save structures to file every...
-timeStructuresSavingInterval=5
+timeStructuresSavingInterval=10000
 
 # Save information about each condensation or cleavage reaction
 saveReactionParameters=0
 
 # Save file times every (if 0 amounts are stores ad each step)
-fileTimesSaveInterval=10
+fileTimesSaveInterval=10000
 
 # Save species amount every (if 0 amounts are stores ad each step)
-fileAmountSaveInterval=10
+fileAmountSaveInterval=1
 
 # Minimal new species creation probability to allow system expansion
 # (If you want to avoid the creation of both new species and reactions set >= 1)
@@ -80,10 +80,13 @@ alphabet=AB
 volume=1e-18
 
 # Volume growth possibility (1: volume changes, 0: volume is fixed)
-volumeGrowth=0
+volumeGrowth=1
 
 # Division type (1: Stochastic, 0: deterministic)
 stochDivision=0
+
+# Dimension with respect to the initial volume for division
+theta=2
 
 # ------------------
 # DYNAMIC PARAMETERS
